--- a/config.toml
+++ b/config.toml
@@ -14,10 +14,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     url = "/about/"
 [[menu.main]]
     name = "GitHub"
-    url = "https://github.com/rstudio/blogdown"
-[[menu.main]]
-    name = "Twitter"
-    url = "https://twitter.com/rstudio"
+    url = "https://github.com/JennyJiang0506/As-Canadian-what-really-makes-you-happy.git"
 
 [params]
     description = "A website built through Hugo and blogdown."
