--- a/config.toml
+++ b/config.toml
@@ -15,10 +15,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
 [[menu.main]]
     name = "GitHub"
     url = "https://github.com/JennyJiang0506/As-Canadian-what-really-makes-you-happy.git"
-
 [params]
-    description = "A website built through Hugo and blogdown."
 
+    description = "A website built through Hugo and blogdown."
+    auther="asassaas"
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.12.0"
     highlightjsCDN = "//cdnjs.cloudflare.com/ajax/libs"
